--- a/find_me_a_tv/public/index.html
+++ b/find_me_a_tv/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Compiled list of many TV's from the web"
     />
     <link rel="tv-icon" href="tvicon.png" />
     <!--
